<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="	#C0C0C0	">

    <TextView
        android:id="@+id/team_name"
        android:layout_width="190dp"
        android:layout_height="34dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/teams_standing"
        android:paddingLeft="15dp"
        android:textSize="@dimen/standing_texts"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/team_wins"
        android:layout_width="35dp"
        android:layout_height="@dimen/standing_item_height"
        android:textSize="@dimen/standing_texts"
        android:gravity="center_vertical"
        android:textAlignment="textStart"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/wins_standing"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/team_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/team_losses"
        android:layout_width="35dp"
        android:layout_height="@dimen/standing_item_height"
        android:textSize="@dimen/standing_texts"
        android:gravity="center_vertical"
        android:textAlignment="textStart"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/losses_standing"
        app:layout_constraintStart_toEndOf="@+id/team_wins"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/team_winning_percentage"
        android:layout_width="58dp"
        android:layout_height="@dimen/standing_item_height"
        android:textSize="@dimen/standing_texts"
        android:gravity="center_vertical"
        android:textAlignment="textStart"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/winningpercentage_standing"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/team_losses"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/team_gb"
        android:layout_width="56dp"
        android:layout_height="@dimen/standing_item_height"
        android:textSize="@dimen/standing_texts"
        android:gravity="center_vertical"
        android:textAlignment="textStart"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/gb_standing"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/team_winning_percentage"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>